# argus-agent

./: .containerignore  .env.example  .gitignore  CHANGELOG.md  Containerfile  LICENSE  README.md  SECURITY.md  config.py  install.ps1  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: app.py  telegram_bot.py
benchmark/: README.md  battery.json  charts.py  report.md
dashboard/: app.js  index.html  styles.css
engine/: cli.py  custom_commands.py  engine.py  events.py  logtail.py  loop.py  model_client.py  model_presets.py  protocol.py  scheduler.py  state.py  status.py  version.py
engine/eval/: judge.py  (+4 more)
scripts/: setup-sandbox.sh  skill_eval.py
tests/: conftest.py  test_adaptive_thinking.py  test_app_echo.py  test_approvals_api.py  test_approvals_broker.py  test_approvals_dep.py  test_approvals_engine.py  test_approvals_policy.py  test_approvals_soul.py  test_approvals_store.py  test_approvals_telegram.py  test_artifacts.py  test_asciichart.py  test_ask_data.py  test_autoextract.py  test_benchmark.py  test_calculator.py  test_charts.py  test_clarify.py  test_code_interpreter.py  test_compact.py  test_config.py  test_config_admin.py  test_config_sandbox.py  test_custom_commands.py  test_datastore.py  test_dep_approval.py  test_dep_gating.py  test_dependency_direction.py  test_deterministic_skills.py  test_documents.py  test_egress_policy.py  test_engine_isolation.py  test_env_isolation.py  test_eval_core.py  test_eval_judge.py  test_eval_scoring.py  test_events.py  test_events_sink.py  test_files.py  (+69 more)
(+135 files in other folders)
