[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.11.0"
description = "Small-model agent loop testbed"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "markdown>=3.5",
]

[project.optional-dependencies]
# HTML→PDF generation. Needs native GTK/Pango/cairo libs — painful on native Windows, so it's opt-in.
pdf = ["weasyprint>=60"]
# OCR for scanned PDFs/images. Needs the Tesseract binary installed separately. Opt-in.
ocr = ["pytesseract>=0.3.10"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
argus = "engine.cli:main"

[tool.setuptools]
packages = ["engine", "backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["podman: needs a real podman binary; skipped when absent"]
